# ThreadPool-traitement-images-parrallele

./: CMakeLists.txt  README.md  remise.py
src/: CMakeLists.txt  filter.c  filter.h  ieffect.c  image.h  list.c  list.h  processing.c  processing.h  threadpool.c  threadpool.h  utils.c  utils.h
test/: CMakeLists.txt  test_tp3.cpp  wrapper.c  wrapper.h
